--- a/back-node/package.json
+++ b/back-node/package.json
@@ -5,10 +5,12 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "3.2.1",
+    "@types/socket.io": "^3.0.2",
     "axios": "^0.23.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "socket.io": "^4.3.1"
   },
   "scripts": {
     "dev": "ts-node-dev --exit-child src/app.ts"
